<resources>
    <string name="app_name">AplicatieMare123</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="signuphere">SignUpHere</string>
    <string name="signup">SignUp</string>
    <string name="signup2">SignUp</string>
    <string name="snare1">Snare1</string>
    <string name="bass_drum1">Bass drum1</string>
    <string name="clap1">Clap1</string>
    <string name="snare2">Snare2</string>
    <string name="bass_drum2">Bass drum2</string>
    <string name="clap2">Clap2</string>
    <string name="snare3">Snare3</string>
    <string name="bass_drum3">Bass drum3</string>
    <string name="clap3">Clap3</string>
    <string name="snare4">Snare4</string>
    <string name="bass_drum4">bass drum4</string>
    <string name="clap4">Clap4</string>
    <string name="snare5">Snare5</string>
    <string name="bass_drum5">bass drum5</string>
    <string name="clap5">clap5</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_2222222222222222">2222222222222222</string>
    <string name="_111">111</string>
    <string name="bassline1">bassline1</string>
    <string name="bass_line1">bass line1</string>
    <string name="bass_line2">bass line2</string>
    <string name="bass_line3">bass line3</string>
    <string name="bass_line4">bass line4</string>
    <string name="bass_line5">bass line5</string>
    <string name="voice1">voice1</string>
    <string name="voice2">voice2</string>
    <string name="voice3">voice3</string>
    <string name="voice4">voice4</string>
    <string name="voice5">voice5</string>
    <string name="synth5">synth5</string>
    <string name="synth4">synth4</string>
    <string name="synth3">synth3</string>
    <string name="synth2">synth2</string>
    <string name="nav_header_desc" />
    <string name="nav_header_title" />
    <string name="nav_header_subtitle" />
    <string name="title_activity_incercare_de_drawer">IncercareDeDrawer</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="fx1">fx1</string>
    <string name="fx2">fx2</string>
    <string name="fx3">fx3</string>
    <string name="fx4">fx4</string>
    <string name="fx">fx</string>
    <string name="fx5">fx5</string>
    <string name="hat1">hat1</string>
    <string name="hat2">hat2</string>
    <string name="hat3">hat3</string>
    <string name="hat4">hat4</string>
    <string name="hat5">hat5</string>
    <string name="perc1">perc1</string>
    <string name="perc2">perc2</string>
    <string name="already_have_an_account_click_to_login">Already have an account? Click to login</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
</resources>