<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="975dp"
        android:layout_height="1364dp"
        android:src="@drawable/backgroundgif"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="@color/black"
        android:text="@string/snare1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="#FF007F"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="@color/black"
        android:text="@string/bass_drum1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="@string/clap1"
        android:textSize="20sp"
        app:backgroundTint="#009999"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#FF007F"
        android:text="@string/snare2"
        android:textSize="20sp"
        app:backgroundTint="#FF007F"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button11"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="@string/bass_drum2"
        android:textSize="20sp"
        android:backgroundTint="#009999"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button12"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="@string/clap2"
        android:textSize="20sp"
        app:backgroundTint="#009999"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#FF007F"
        android:text="@string/snare3"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="#FF007F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="@string/bass_drum3"
        android:textSize="20sp"
        android:backgroundTint="#009999"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="@string/clap3"
        android:textSize="20sp"
        app:backgroundTint="#009999"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#FF007F"
        android:text="@string/snare4"
        android:textSize="20sp"
        app:backgroundTint="#FF007F"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button15"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="@color/black"
        android:text="@string/bass_drum4"
        android:textSize="20sp"
        android:backgroundTint="#009999"
        app:layout_constraintBottom_toTopOf="@+id/button17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button13"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="@string/clap4"
        android:textSize="20sp"
        app:backgroundTint="#009999"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button16"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#FF007F"
        android:text="@string/snare5"
        android:textSize="20sp"
        app:backgroundTint="#FF007F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button17"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="@color/black"
        android:text="@string/bass_drum5"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button18"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="@string/clap5"
        android:textSize="20sp"
        app:backgroundTint="#009999"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button17"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

</androidx.constraintlayout.widget.ConstraintLayout>



