<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="975dp"
        android:layout_height="1364dp"
        android:src="@drawable/backgroundgif2"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button101"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="@color/black"
        android:text="@string/bass_line1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="#0000CC"
        app:layout_constraintBottom_toTopOf="@+id/button107"
        app:layout_constraintEnd_toStartOf="@+id/button108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button102"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:text="@string/voice1"
        android:textSize="20sp"
        android:background="#00CC00"
        app:backgroundTint="#00CC00"
        app:layout_constraintBottom_toTopOf="@+id/button108"
        app:layout_constraintEnd_toStartOf="@+id/button103"
        app:layout_constraintStart_toEndOf="@+id/button101"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button103"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="synth1"
        android:textSize="20sp"
        app:backgroundTint="#CC0000"
        app:layout_constraintBottom_toTopOf="@+id/button109"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button102"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button104"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#FF007F"
        android:text="@string/bass_line2"
        android:textSize="20sp"
        app:backgroundTint="#0000CC"
        app:layout_constraintBottom_toTopOf="@+id/button107"
        app:layout_constraintEnd_toStartOf="@+id/button105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button101" />

    <Button
        android:id="@+id/button105"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#0000CC"
        android:text="@string/voice2"
        android:textSize="20sp"
        app:backgroundTint="#00CC00"
        app:layout_constraintBottom_toTopOf="@+id/button108"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button102" />

    <Button
        android:id="@+id/button106"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="@string/synth2"
        android:textSize="20sp"
        app:backgroundTint="#CC0000"
        app:layout_constraintBottom_toTopOf="@+id/button109"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button105"
        app:layout_constraintTop_toBottomOf="@+id/button103" />

    <Button
        android:id="@+id/button107"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#FF007F"
        android:text="@string/bass_line3"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="#0000CC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button108"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="@string/voice3"
        android:textSize="20sp"
        app:backgroundTint="#00CC00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button109"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="@string/synth3"
        android:textSize="20sp"
        app:backgroundTint="#CC0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button108"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button110"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#FF007F"
        android:text="@string/bass_line4"
        android:textSize="20sp"
        app:backgroundTint="#0000CC"
        app:layout_constraintBottom_toTopOf="@+id/button113"
        app:layout_constraintEnd_toStartOf="@+id/button111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button107" />

    <Button
        android:id="@+id/button111"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="@color/black"
        android:text="@string/voice4"
        android:textSize="20sp"
        app:backgroundTint="#00CC00"
        app:layout_constraintBottom_toTopOf="@+id/button114"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button108" />

    <Button
        android:id="@+id/button112"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="@string/synth4"
        android:textSize="20sp"
        app:backgroundTint="#CC0000"
        app:layout_constraintBottom_toTopOf="@+id/button115"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button111"
        app:layout_constraintTop_toBottomOf="@+id/button109" />

    <Button
        android:id="@+id/button113"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#FF007F"
        android:text="@string/bass_line5"
        android:textSize="20sp"
        app:backgroundTint="#0000CC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button107" />

    <Button
        android:id="@+id/button114"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="@color/black"
        android:text="@string/voice5"
        android:textSize="20sp"
        app:backgroundTint="#00CC00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button108" />

    <Button
        android:id="@+id/button115"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="@string/synth5"
        android:textSize="20sp"
        app:backgroundTint="#CC0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button114"
        app:layout_constraintTop_toBottomOf="@+id/button109" />

</androidx.constraintlayout.widget.ConstraintLayout>



