<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="975dp"
        android:layout_height="1364dp"
        android:src="@drawable/backgroundgif3"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1011"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="@color/black"
        android:text="@string/fx1"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="#CCCC00"
        app:layout_constraintBottom_toTopOf="@+id/button1071"
        app:layout_constraintEnd_toStartOf="@+id/button1081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1021"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:text="@string/hat1"
        android:textSize="20sp"
        android:background="#00CC00"
        app:backgroundTint="#202020"
        app:layout_constraintBottom_toTopOf="@+id/button1081"
        app:layout_constraintEnd_toStartOf="@+id/button1031"
        app:layout_constraintStart_toEndOf="@+id/button1011"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1031"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="@string/perc1"
        android:textSize="20sp"
        app:backgroundTint="#FF8000"
        app:layout_constraintBottom_toTopOf="@+id/button1091"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button1021"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1041"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#FF007F"
        android:text="@string/fx2"
        android:textSize="20sp"
        app:backgroundTint="#CCCC00"
        app:layout_constraintBottom_toTopOf="@+id/button1071"
        app:layout_constraintEnd_toStartOf="@+id/button1051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1011" />

    <Button
        android:id="@+id/button1051"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#0000CC"
        android:text="@string/hat2"
        android:textSize="20sp"
        app:backgroundTint="#202020"
        app:layout_constraintBottom_toTopOf="@+id/button1081"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1021" />

    <Button
        android:id="@+id/button1061"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="@string/perc2"
        android:textSize="20sp"
        app:backgroundTint="#FF8000"
        app:layout_constraintBottom_toTopOf="@+id/button1091"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button1051"
        app:layout_constraintTop_toBottomOf="@+id/button1031" />

    <Button
        android:id="@+id/button1071"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#FF007F"
        android:text="@string/fx3"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="#CCCC00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button1081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1081"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="@string/hat3"
        android:textSize="20sp"
        app:backgroundTint="#202020"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1091"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="perc3"
        android:textSize="20sp"
        app:backgroundTint="#FF8000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button1081"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1101"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#FF007F"
        android:text="@string/fx4"
        android:textSize="20sp"
        app:backgroundTint="#CCCC00"
        app:layout_constraintBottom_toTopOf="@+id/button1131"
        app:layout_constraintEnd_toStartOf="@+id/button1111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1071" />

    <Button
        android:id="@+id/button1111"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="@color/black"
        android:text="@string/hat4"
        android:textSize="20sp"
        app:backgroundTint="#202020"
        app:layout_constraintBottom_toTopOf="@+id/button1141"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1081" />

    <Button
        android:id="@+id/button1121"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="perc4"
        android:textSize="20sp"
        app:backgroundTint="#FF8000"
        app:layout_constraintBottom_toTopOf="@+id/button1151"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button1111"
        app:layout_constraintTop_toBottomOf="@+id/button1091" />

    <Button
        android:id="@+id/button1131"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#FF007F"
        android:text="@string/fx5"
        android:textSize="20sp"
        app:backgroundTint="#CCCC00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button1141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1071" />

    <Button
        android:id="@+id/button1141"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="@color/black"
        android:text="@string/hat5"
        android:textSize="20sp"
        app:backgroundTint="#202020"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1081" />

    <Button
        android:id="@+id/button1151"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:background="#009999"
        android:text="perc5"
        android:textSize="20sp"
        app:backgroundTint="#FF8000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button1141"
        app:layout_constraintTop_toBottomOf="@+id/button1091" />

</androidx.constraintlayout.widget.ConstraintLayout>



